Fix number wrapping in display

--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,11 @@
 .Container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: min-content repeat(5, 1fr);
   gap: 5px;
   padding: 5px;
   width: 350px;
-  height: 500px;
+  min-height: 500px;
   border: 1px solid black;
   background-color: var(--gun-metal);
 }
@@ -51,6 +51,8 @@ button {
   color: white;
   padding: 20px 10px;
   text-align: right;
+  inline-size: 328px;
+  overflow-wrap: break-word;
 }
 
 #clear {
